# sl0w-rust

./: README.md
android_cross/: prepare.sh
android_cross/androtest/: Cargo.toml
android_cross/androtest/.cargo/: config
dir_watcher/: Cargo.toml
dir_watcher/src/: main.rs
hash_calc/: Cargo.toml
hash_calc/src/: main.rs
pass_gen/: Cargo.toml
pass_gen/src/: main.rs  main.rs.bak
port_scanner/: Cargo.toml
port_scanner/src/: main.rs
shared_memory/: README.md
shared_memory/shmemlib/: Cargo.toml
shared_memory/shmemlib/src/: lib.rs
shared_memory/shmemspect0r/: Cargo.toml
shared_memory/shmemspect0r/src/: main.rs
