[package]
name = "hash_calc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.10.6"
hex-literal = "0.4.1"
md-5 = "0.10.6"
sha1 = "0.10.6"
sha2 = "0.10.8"
sha256 = "1.4.0"
sha3 = "0.10.8"
structopt = "0.3"
